--- a/Config/Tags/EnemyTag.ini
+++ b/Config/Tags/EnemyTag.ini
@@ -1,8 +1,17 @@
 [/Script/GameplayTags.GameplayTagsList]
 GameplayTagList=(Tag="Enemy.Melee.Atk1",DevComment="")
 GameplayTagList=(Tag="Enemy.Melee.Atk2",DevComment="")
+GameplayTagList=(Tag="Enemy.Melee.Atk3",DevComment="")
+GameplayTagList=(Tag="Enemy.Melee.Atk4",DevComment="")
 GameplayTagList=(Tag="Enemy.Range.Atk1",DevComment="")
 GameplayTagList=(Tag="Enemy.Range.Atk2",DevComment="")
+GameplayTagList=(Tag="Enemy.Range.Atk3",DevComment="")
+GameplayTagList=(Tag="Enemy.Range.Atk4",DevComment="")
+GameplayTagList=(Tag="Enemy.Skill",DevComment="")
+GameplayTagList=(Tag="Enemy.Skill.Skill1",DevComment="")
+GameplayTagList=(Tag="Enemy.Skill.Skill2",DevComment="")
+GameplayTagList=(Tag="Enemy.Skill.Skill3",DevComment="")
+GameplayTagList=(Tag="Enemy.Skill.Skill4",DevComment="")
 GameplayTagList=(Tag="Enemy_Behavior",DevComment="The major categories of the enemy\'s behaviors")
 GameplayTagList=(Tag="Enemy_Behavior.B_Combat",DevComment="")
 GameplayTagList=(Tag="Enemy_Behavior.B_Combat.Assist",DevComment="")
