--- a/Config/Tags/PlayerGameplayTag.ini
+++ b/Config/Tags/PlayerGameplayTag.ini
@@ -1,10 +1,16 @@
 [/Script/GameplayTags.GameplayTagsList]
 GameplayTagList=(Tag="PlayerState",DevComment="player character stats  e.g  move, ability cast, idle, dead e.t.c")
 GameplayTagList=(Tag="PlayerState.AbilityCast",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.ActionState",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.ActionState.Death",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.ActionState.Flail",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.ActionState.Stun",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.BlockCombo",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.CanCombo",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.Cooldown",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.Dash",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.Dash.1",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.Dash.2",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.HeavyAtk.Combo1",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.HeavyAtk.Combo2",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.HeavyAtk.Combo3",DevComment="")
@@ -14,6 +20,11 @@ GameplayTagList=(Tag="PlayerState.AbilityCast.LightAtk.Combo2",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.LightAtk.Combo3",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.LightAtk.Combo4",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.RangeAttack",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.Skill",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.Skill.Cast1",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.Skill.Cast2",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.Skill.Cast3",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.Skill.Cast4",DevComment="")
 GameplayTagList=(Tag="PlayerState.Combat.JumpFrame",DevComment="")
 GameplayTagList=(Tag="PlayerState.Idle",DevComment="")
 GameplayTagList=(Tag="PlayerState.Move",DevComment="")
