--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -8,6 +8,7 @@ FastReplication=False
 InvalidTagCharacters="\"\',"
 +GameplayTagRedirects=(OldTagName="AnimNotify.ComboWindow",NewTagName="AnimNotify.Combo_1_Window")
 +GameplayTagRedirects=(OldTagName="TestOnly.Player.Combo.MeleeAtk1",NewTagName="TestOnly.Player.Combo.LightAtk1")
++GameplayTagRedirects=(OldTagName="PlayerState.AbilityCast.Skil",NewTagName="PlayerState.AbilityCast.Skill")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="ComboType",DevComment="")
