--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -9,11 +9,10 @@ InvalidTagCharacters="\"\',"
 +GameplayTagRedirects=(OldTagName="AnimNotify.ComboWindow",NewTagName="AnimNotify.Combo_1_Window")
 +GameplayTagRedirects=(OldTagName="TestOnly.Player.Combo.MeleeAtk1",NewTagName="TestOnly.Player.Combo.LightAtk1")
 +GameplayTagRedirects=(OldTagName="PlayerState.AbilityCast.Skil",NewTagName="PlayerState.AbilityCast.Skill")
++GameplayTagRedirects=(OldTagName="PlayerState.AbilityCast.Dash.1",NewTagName="PlayerState.AbilityCast.Dash.Dash1")
++GameplayTagRedirects=(OldTagName="PlayerState.AbilityCast.Dash.2",NewTagName="PlayerState.AbilityCast.Dash.Dash2")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
-+GameplayTagList=(Tag="ComboType",DevComment="")
-+GameplayTagList=(Tag="ComboType.HeavyAtk",DevComment="")
-+GameplayTagList=(Tag="ComboType.LightAtk",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Character",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Character.Bleed",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Character.HitEffect",DevComment="")
