--- a/Config/Tags/PlayerGameplayTag.ini
+++ b/Config/Tags/PlayerGameplayTag.ini
@@ -4,13 +4,23 @@ GameplayTagList=(Tag="PlayerState.AbilityCast",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.ActionState",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.ActionState.Death",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.ActionState.Flail",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.ActionState.OnHert",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.ActionState.Stun",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.BlockCombo",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.CanCombo",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.ChargingAttack",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.ChargingAttack.CATK1",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.ChargingAttack.CATK2",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.ChargingAttack.CATK3",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.ChargingAttack.CATK4",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.Cooldown",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.Dash",DevComment="")
-GameplayTagList=(Tag="PlayerState.AbilityCast.Dash.1",DevComment="")
-GameplayTagList=(Tag="PlayerState.AbilityCast.Dash.2",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.Dash.Dash1",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.Dash.Dash2",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.Dash.DashATK1",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.Dash.DashATK2",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.Dash.Flash1",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.Dash.Flash2",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.HeavyAtk.Combo1",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.HeavyAtk.Combo2",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.HeavyAtk.Combo3",DevComment="")
@@ -25,7 +35,23 @@ GameplayTagList=(Tag="PlayerState.AbilityCast.Skill.Cast1",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.Skill.Cast2",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.Skill.Cast3",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.Skill.Cast4",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.SpecialAttack",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.SpecialAttack.SATK1",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.SpecialAttack.SATK2",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.SpecialAttack.SATK3",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.SpecialAttack.SATK4",DevComment="")
 GameplayTagList=(Tag="PlayerState.Combat.JumpFrame",DevComment="")
 GameplayTagList=(Tag="PlayerState.Idle",DevComment="")
+GameplayTagList=(Tag="PlayerState.Montage.Attack",DevComment="")
+GameplayTagList=(Tag="PlayerState.Montage.Cast",DevComment="")
+GameplayTagList=(Tag="PlayerState.Montage.Dead",DevComment="")
+GameplayTagList=(Tag="PlayerState.Montage.Fail",DevComment="")
+GameplayTagList=(Tag="PlayerState.Montage.GetHit",DevComment="")
+GameplayTagList=(Tag="PlayerState.Montage.Run",DevComment="")
+GameplayTagList=(Tag="PlayerState.Montage.Spawn",DevComment="")
+GameplayTagList=(Tag="PlayerState.Montage.Stun",DevComment="")
+GameplayTagList=(Tag="PlayerState.Montage.Taunt",DevComment="")
+GameplayTagList=(Tag="PlayerState.Montage.Teleport",DevComment="")
+GameplayTagList=(Tag="PlayerState.Montage.Victory",DevComment="")
 GameplayTagList=(Tag="PlayerState.Move",DevComment="")
 
