--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -11,6 +11,15 @@ InvalidTagCharacters="\"\',"
 +GameplayTagRedirects=(OldTagName="PlayerState.AbilityCast.Skil",NewTagName="PlayerState.AbilityCast.Skill")
 +GameplayTagRedirects=(OldTagName="PlayerState.AbilityCast.Dash.1",NewTagName="PlayerState.AbilityCast.Dash.Dash1")
 +GameplayTagRedirects=(OldTagName="PlayerState.AbilityCast.Dash.2",NewTagName="PlayerState.AbilityCast.Dash.Dash2")
++GameplayTagRedirects=(OldTagName="Enemy.Melee.Atk1",NewTagName="Enemy.Melee.LAtk1")
++GameplayTagRedirects=(OldTagName="Enemy.Melee.Atk2",NewTagName="Enemy.Melee.LAtk2")
++GameplayTagRedirects=(OldTagName="Enemy.Melee.Atk3",NewTagName="Enemy.Melee.LAtk3")
++GameplayTagRedirects=(OldTagName="Enemy.Melee.Atk4",NewTagName="Enemy.Melee.LAtk4")
++GameplayTagRedirects=(OldTagName="Enemy.Range.Atk1",NewTagName="Enemy.Range.LAtk1")
++GameplayTagRedirects=(OldTagName="Enemy.Range.Atk2",NewTagName="Enemy.Range.L\\Atk2")
++GameplayTagRedirects=(OldTagName="Enemy.Range.L\\Atk2",NewTagName="Enemy.Range.LAtk2")
++GameplayTagRedirects=(OldTagName="Enemy.Range.Atk3",NewTagName="Enemy.Range.LAtk3")
++GameplayTagRedirects=(OldTagName="Enemy.Range.Atk4",NewTagName="Enemy.Range.LAtk4")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GameplayCue.Character",DevComment="")
