--- a/Config/Tags/EnemyTag.ini
+++ b/Config/Tags/EnemyTag.ini
@@ -1,12 +1,20 @@
 [/Script/GameplayTags.GameplayTagsList]
-GameplayTagList=(Tag="Enemy.Melee.Atk1",DevComment="")
-GameplayTagList=(Tag="Enemy.Melee.Atk2",DevComment="")
-GameplayTagList=(Tag="Enemy.Melee.Atk3",DevComment="")
-GameplayTagList=(Tag="Enemy.Melee.Atk4",DevComment="")
-GameplayTagList=(Tag="Enemy.Range.Atk1",DevComment="")
-GameplayTagList=(Tag="Enemy.Range.Atk2",DevComment="")
-GameplayTagList=(Tag="Enemy.Range.Atk3",DevComment="")
-GameplayTagList=(Tag="Enemy.Range.Atk4",DevComment="")
+GameplayTagList=(Tag="Enemy.Melee.HAtk1",DevComment="")
+GameplayTagList=(Tag="Enemy.Melee.HAtk2",DevComment="")
+GameplayTagList=(Tag="Enemy.Melee.HAtk3",DevComment="")
+GameplayTagList=(Tag="Enemy.Melee.HAtk4",DevComment="")
+GameplayTagList=(Tag="Enemy.Melee.LAtk1",DevComment="")
+GameplayTagList=(Tag="Enemy.Melee.LAtk2",DevComment="")
+GameplayTagList=(Tag="Enemy.Melee.LAtk3",DevComment="")
+GameplayTagList=(Tag="Enemy.Melee.LAtk4",DevComment="")
+GameplayTagList=(Tag="Enemy.Range.HAtk1",DevComment="")
+GameplayTagList=(Tag="Enemy.Range.HAtk2",DevComment="")
+GameplayTagList=(Tag="Enemy.Range.HAtk3",DevComment="")
+GameplayTagList=(Tag="Enemy.Range.HAtk4",DevComment="")
+GameplayTagList=(Tag="Enemy.Range.LAtk1",DevComment="")
+GameplayTagList=(Tag="Enemy.Range.LAtk2",DevComment="")
+GameplayTagList=(Tag="Enemy.Range.LAtk3",DevComment="")
+GameplayTagList=(Tag="Enemy.Range.LAtk4",DevComment="")
 GameplayTagList=(Tag="Enemy.Skill",DevComment="")
 GameplayTagList=(Tag="Enemy.Skill.Skill1",DevComment="")
 GameplayTagList=(Tag="Enemy.Skill.Skill2",DevComment="")
