--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -12,6 +12,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GameplayCue.Character.Bleed",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Character.HitEffect",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Character.KnockBack",DevComment="")
++GameplayTagList=(Tag="GameplayCue.Character.MontageFreeze",DevComment="")
 +GameplayTagList=(Tag="Skill",DevComment="")
 +GameplayTagList=(Tag="Skill.Dash",DevComment="")
 +GameplayTagList=(Tag="Status",DevComment="")
