--- a/Config/Tags/Buff.ini
+++ b/Config/Tags/Buff.ini
@@ -2,4 +2,5 @@
 GameplayTagList=(Tag="Offensive.Damage",DevComment="")
 GameplayTagList=(Tag="Passive.Damage",DevComment="Dot/passive damage")
 GameplayTagList=(Tag="Passive.FreezeFrame",DevComment="")
+GameplayTagList=(Tag="Passive.KnockBack",DevComment="")
 
