--- a/Config/Tags/Buff.ini
+++ b/Config/Tags/Buff.ini
@@ -1,5 +1,6 @@
 [/Script/GameplayTags.GameplayTagsList]
 GameplayTagList=(Tag="Offensive.Damage",DevComment="")
+GameplayTagList=(Tag="Passive.Bleed",DevComment="")
 GameplayTagList=(Tag="Passive.Damage",DevComment="Dot/passive damage")
 GameplayTagList=(Tag="Passive.FreezeFrame",DevComment="")
 GameplayTagList=(Tag="Passive.KnockBack",DevComment="")
