--- a/Config/Tags/PlayerGameplayTag.ini
+++ b/Config/Tags/PlayerGameplayTag.ini
@@ -43,6 +43,7 @@ GameplayTagList=(Tag="PlayerState.AbilityCast.SpecialAttack.SATK4",DevComment=""
 GameplayTagList=(Tag="PlayerState.AnimLayer",DevComment="")
 GameplayTagList=(Tag="PlayerState.AnimLayer.Default",DevComment="")
 GameplayTagList=(Tag="PlayerState.Combat.JumpFrame",DevComment="")
+GameplayTagList=(Tag="PlayerState.HasWeapon",DevComment="")
 GameplayTagList=(Tag="PlayerState.Idle",DevComment="")
 GameplayTagList=(Tag="PlayerState.Montage.Attack",DevComment="")
 GameplayTagList=(Tag="PlayerState.Montage.Cast",DevComment="")
