--- a/Config/Tags/Buff.ini
+++ b/Config/Tags/Buff.ini
@@ -3,5 +3,6 @@ GameplayTagList=(Tag="Offensive.Damage",DevComment="")
 GameplayTagList=(Tag="Passive.Bleed",DevComment="")
 GameplayTagList=(Tag="Passive.Damage",DevComment="Dot/passive damage")
 GameplayTagList=(Tag="Passive.FreezeFrame",DevComment="")
+GameplayTagList=(Tag="Passive.HurtMontage",DevComment="")
 GameplayTagList=(Tag="Passive.KnockBack",DevComment="")
 
