--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -6,6 +6,7 @@ AllowEditorTagUnloading=True
 AllowGameTagUnloading=False
 FastReplication=False
 InvalidTagCharacters="\"\',"
++GameplayTagRedirects=(OldTagName="GameplayCue.Character. SuperResist",NewTagName="GameplayCue.Character.SuperResist")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GameplayCue.Character",DevComment="")
@@ -13,6 +14,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GameplayCue.Character.HitEffect",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Character.KnockBack",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Character.MontageFreeze",DevComment="")
++GameplayTagList=(Tag="GameplayCue.Character.Rage",DevComment="")
++GameplayTagList=(Tag="GameplayCue.Character.SuperResist",DevComment="")
 +GameplayTagList=(Tag="Skill",DevComment="")
 +GameplayTagList=(Tag="Skill.Dash",DevComment="")
 +GameplayTagList=(Tag="Status",DevComment="")
