--- a/Config/Tags/Buff.ini
+++ b/Config/Tags/Buff.ini
@@ -5,4 +5,6 @@ GameplayTagList=(Tag="Passive.Damage",DevComment="Dot/passive damage")
 GameplayTagList=(Tag="Passive.FreezeFrame",DevComment="")
 GameplayTagList=(Tag="Passive.HurtMontage",DevComment="")
 GameplayTagList=(Tag="Passive.KnockBack",DevComment="")
+GameplayTagList=(Tag="Passive.Rage",DevComment="")
+GameplayTagList=(Tag="Passive.SuperResist",DevComment="")
 
