--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -18,3 +18,5 @@ MetaDataTagsForAssetRegistry=()
 bUseDebugTargetFromHud=true
 +GameplayCueNotifyPaths="/Game/Code/GAS/GameplayCueNotifies"
 
+[/Script/DevKit.DevAssetManager]
+YogGameDataPath=/Game/YogGameData_General.YogGameData_General
