--- a/Config/Tags/Buff.ini
+++ b/Config/Tags/Buff.ini
@@ -4,6 +4,8 @@ GameplayTagList=(Tag="Passive.Bleed",DevComment="")
 GameplayTagList=(Tag="Passive.Damage",DevComment="Dot/passive damage")
 GameplayTagList=(Tag="Passive.FreezeFrame",DevComment="")
 GameplayTagList=(Tag="Passive.HurtMontage",DevComment="")
+GameplayTagList=(Tag="Passive.HurtMontage.Back",DevComment="")
+GameplayTagList=(Tag="Passive.HurtMontage.Front",DevComment="")
 GameplayTagList=(Tag="Passive.KnockBack",DevComment="")
 GameplayTagList=(Tag="Passive.Rage",DevComment="")
 GameplayTagList=(Tag="Passive.SuperResist",DevComment="")
