--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -11,6 +11,7 @@ NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GameplayCue.Character",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Character.Bleed",DevComment="")
++GameplayTagList=(Tag="GameplayCue.Character.CameraShake",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Character.HitEffect",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Character.KnockBack",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Character.MontageFreeze",DevComment="")
