--- a/Config/Tags/Buff.ini
+++ b/Config/Tags/Buff.ini
@@ -11,6 +11,7 @@ GameplayTagList=(Tag="Passive.HurtMontage.Back",DevComment="")
 GameplayTagList=(Tag="Passive.HurtMontage.Front",DevComment="")
 GameplayTagList=(Tag="Passive.KnockBack",DevComment="")
 GameplayTagList=(Tag="Passive.Phantom",DevComment="")
+GameplayTagList=(Tag="Passive.Phantom.Cooldown",DevComment="")
 GameplayTagList=(Tag="Passive.Rage",DevComment="")
 GameplayTagList=(Tag="Passive.SuperResist",DevComment="")
 
