--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -22,6 +22,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Skill.Dash",DevComment="")
 +GameplayTagList=(Tag="Status",DevComment="")
 +GameplayTagList=(Tag="Status.Dead",DevComment="")
++GameplayTagList=(Tag="Status.Invulnerable",DevComment="")
 +GameplayTagList=(Tag="Status.WeaponHold",DevComment="")
 +GameplayTagList=(Tag="Status.WeaponHold.GreatSword",DevComment="")
 +GameplayTagList=(Tag="Status.WeaponHold.Katana",DevComment="")
