--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -23,6 +23,9 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Status",DevComment="")
 +GameplayTagList=(Tag="Status.Dead",DevComment="")
 +GameplayTagList=(Tag="Status.Invulnerable",DevComment="")
++GameplayTagList=(Tag="Status.Tier.Boss",DevComment="")
++GameplayTagList=(Tag="Status.Tier.Elite",DevComment="")
++GameplayTagList=(Tag="Status.Tier.Mob",DevComment="")
 +GameplayTagList=(Tag="Status.WeaponHold",DevComment="")
 +GameplayTagList=(Tag="Status.WeaponHold.GreatSword",DevComment="")
 +GameplayTagList=(Tag="Status.WeaponHold.Katana",DevComment="")
