--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -20,3 +20,16 @@ bUseDebugTargetFromHud=true
 
 [/Script/DevKit.DevAssetManager]
 YogGameDataPath=/Game/YogGameData_General.YogGameData_General
+
+[CommonInputPlatformSettings_Windows CommonInputPlatformSettings]
+DefaultInputType=MouseAndKeyboard
+bSupportsMouseAndKeyboard=True
+bSupportsTouch=False
+bSupportsGamepad=True
+DefaultGamepadName=Windows
+bCanChangeGamepadType=True
+
+[/Script/CommonLoadingScreen.CommonLoadingScreenSettings]
+LoadingScreenWidget=/Game/UI/UI_LoadingScreen.UI_LoadingScreen_C
+LoadingScreenZOrder=20000
+
